@@ -1,3 +1,7 @@
+Wed May 15 19:01:42 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
+
+	* Merged with Irssi CVS for Irssi SILC client.
+
 Tue May 14 19:37:48 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
 
 	* Completed the protocol specifications.
